--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,23 @@
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
             <version>10.8.2.2</version>
         </dependency>
-        <!--        <dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <version>1.11.232</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.11.232</version>
-        </dependency>-->
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
